--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,37 @@ top: 30PX;
 .galeria .gallery{
     margin: 10px auto 10px;
 }
+
+/*CSS FOOTER*/
+
+.rodape {
+    padding: 50px 50px 0;
+}
+
+.rodape .info-contato {
+    margin: 0px;
+}
+
+.rodape a {
+    text-decoration: none;
+    color: #000;
+    font-size: 13px;
+}
+
+.rodape a:hover {
+    font-weight: bold;
+}
+
+.rodape .redes-sociais {
+    display: inline-block;
+}
+
+.rodape .redes-sociais img {
+    width: 45px;
+    height: 40px;
+}
+
+.rodape .p.direitos {
+    text-align: center;
+    margin-top: 40px;
+}
