--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ top: 30PX;
     text-align: center;
     font-size: 24px;
     font-weight: bold;
+    margin-top: 150px;
 }
 
 .destaque p{
@@ -169,4 +170,45 @@ top: 30PX;
 .rodape .p.direitos {
     text-align: center;
     margin-top: 40px;
+}
+
+/*Formulário de Contato*/
+.contact{
+    padding: 4%;
+    height: 400px;
+}
+.col-md-3 {
+    background: #ff9b00;
+    padding: 4%;
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+   
+}
+.contact-info{
+    margin-top:10%;
+}
+.contact-info img{
+    margin-bottom: 15%;
+}
+.contact-info h2{
+    margin-bottom: 10%;
+}
+.col-md-9{
+    background: #fff;
+    padding: 3%;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
+.contact-form label{
+    font-weight:600;
+}
+.contact-form button{
+    background: #25274d;
+    color: #fff;
+    font-weight: 600;
+    width: 25%;
+    margin-top: 20px;
+}
+.contact-form button:focus{
+    box-shadow:none;
 }
