--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,9 @@ top: 30PX;
 /* CSS Galeria Full*/
 
 .galeria{
-    margin: 60px auto 20px;
+    width: 1920px;
+    position: relative;
+    margin: 10px;
 }
 
 .galeria h2{
@@ -135,7 +137,11 @@ top: 30PX;
 }
 
 .galeria .gallery{
-    margin: 10px auto 10px;
+    margin: 5px;
+    background-color: aquamarine;
+    padding: 4%;
+    /*Arredondamento de Borda*/
+    border-radius: 0.5rem;
 }
 
 /*CSS FOOTER*/
@@ -177,12 +183,8 @@ top: 30PX;
     padding: 4%;
     height: 400px;
 }
-.col-md-3 {
-    background: #ff9b00;
-    padding: 4%;
-    border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
-   
+
+
 }
 .contact-info{
     margin-top:10%;
