--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,85 @@
-/* CSS */
-.menu_top{
-    width: 100%;
-    height: 80px;
-}
-/*Seletores destacados em vermelho*/
-.menu_top img {
-    float: left;
-    height: 40px;
-    position: relative;
-    top: 20px;
-    left: 20px;
+/* CSS Menu Responsivo*/
+body, ul {
+    margin: 0px;
+    padding: 0px;
 }
 
-.menu_top .menu .linkMenu {
-text-decoration: nome;
-margin: 30px 8px 0px;
-font-weight: bold;
-font-family: Arial, Helvetica, sans-serif;
-position: relative;
-color: rgb(172, 14, 14);
-left: 50%;
-top: 30PX;
+a {
+    color: #000;
+    text-decoration: none;
+    font-family: sans-serif;
 }
 
-.menu_top .menu .login {
-    background-color: aqua;
-    color: #fff;
-    padding: 10PX 12PX;
+a:hover {
+    background: #ffc;
 }
+#logo {
+    font-size: 1.5rem;
+}
+
+#header {
+    box-sizing: border-box;
+    height: 70px;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #e7e7e7;
+}
+
+#menu {
+    display: flex;
+    list-style: none;
+    gap: 0.5rem;
+}
+
+#btn-mobile {
+    display: none;
+}
+
+@media (max-width: 600px) {
+    #menu{
+        display: block;
+        position: absolute;
+        top: 70px;
+        background: #e7e7e7;
+        transition: 0.6s;
+        z-index: 1000;
+        height: 0px;
+        padding-left: 5px;
+        visibility: hidden;
+        overflow-y: hidden;
+    }
+    #menu li {
+        padding-top: 30px;
+        padding-bottom: 0px;
+        /*padding: 1rem 0: */
+        margin: 0 1rem;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+    }
+    #nav.active #menu {
+        height: calc(100vh - 70px);
+        visibility: visible;
+        overflow-y: auto;
+    }
+    #btn-mobile {
+        display: flex;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+        gap: 0.5rem
+    }
+   /* #hamburger {
+
+    }*/
+}
+
+
+
+
+
 .section-banner-home{
     width: 100%;
     height: 500px;
@@ -185,7 +237,6 @@ top: 30PX;
 }
 
 
-}
 .contact-info{
     margin-top:10%;
 }
