--- a/css/styles.css
+++ b/css/styles.css
@@ -71,9 +71,32 @@ a:hover {
         cursor: pointer;
         gap: 0.5rem
     }
-   /* #hamburger {
+    #hamburger {
+        border-top: 2px solid;
+        width: 20px;
+    }
+    #hamburger::after
+    #hamburger::before{
+        content: '';
+        display: block;
+        width: 20px;
+        height: 2px;
+        background: currentColor;
+        margin-top: 5px;
+        transition: 0.3s;
+        position: relative;
+    }
+    #nav.active #hamburger {
+        border-top-color: transparent;
+    }
+    nav.active #hamburger::before {
+        transform: rotate(135deg);
+    }
+    nav.active #hamburger::after {
+        transform: rotate(-135deg);
+        top: -7px;
+    }
 
-    }*/
 }
 
 
