--- a/css/styles.css
+++ b/css/styles.css
@@ -55,12 +55,13 @@ a:hover {
         padding-bottom: 0px;
         /*padding: 1rem 0: */
         margin: 0 1rem;
+        text-align: right;
         border-bottom: 2px solid rgba(0, 0, 0, 0.05);
     }
     #nav.active #menu {
         height: calc(100vh - 70px);
         visibility: visible;
-        overflow-y: auto;
+        overflow-y: hidden;/*valor original: auto, serve para esconder a barra de rolagem no menu colapsado*/
     }
     #btn-mobile {
         display: flex;
@@ -75,7 +76,7 @@ a:hover {
         border-top: 2px solid;
         width: 20px;
     }
-    #hamburger::after
+    #hamburger::after, 
     #hamburger::before{
         content: '';
         display: block;
@@ -89,10 +90,10 @@ a:hover {
     #nav.active #hamburger {
         border-top-color: transparent;
     }
-    nav.active #hamburger::before {
+    #nav.active #hamburger::before {
         transform: rotate(135deg);
     }
-    nav.active #hamburger::after {
+    #nav.active #hamburger::after {
         transform: rotate(-135deg);
         top: -7px;
     }
