--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,11 @@ a:hover {
 
 #header {
     box-sizing: border-box;
+    width: 100%;
     height: 70px;
-    padding: 1rem;
+    padding: 0px;
+    position: fixed;
+    z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -42,20 +45,21 @@ a:hover {
         display: block;
         position: absolute;
         top: 70px;
+        width: 15em;
         background: #e7e7e7;
         transition: 0.6s;
         z-index: 1000;
         height: 0px;
-        padding-left: 5px;
+        padding-left: 15px;
         visibility: hidden;
         overflow-y: hidden;
     }
     #menu li {
         padding-top: 30px;
         padding-bottom: 0px;
+        width: 500px;
         /*padding: 1rem 0: */
         margin: 0 1rem;
-        text-align: right;
         border-bottom: 2px solid rgba(0, 0, 0, 0.05);
     }
     #nav.active #menu {
@@ -100,6 +104,10 @@ a:hover {
 
 }
 
+/* Descer o carrossel*/
+#carouselExampleInterval {
+    padding-top: 80px;
+}
 
 
 
